Еще раз перепроверил
На компе все получается, при нажатии на кнопки заказа появляется название продукции в форме. После заливки на хост нет

--- a/panda-robotics 2.ru/index.html
+++ b/panda-robotics 2.ru/index.html
@@ -1,57 +1,62 @@
+
 <!DOCTYPE html>
 <html lang="ru">
 
 <head>
-  <meta name="yandex-verification" content="ab603bc20afd81f8" />
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="cleartype" content="on">
-  <title>Официальное представительство PANDA в РФ</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-  <link rel="stylesheet" href="feedback/css/jquery.arcticmodal.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
-  <script src="https://use.fontawesome.com/a3c0f27459.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-  <script src="./js/maplace-0.1.3.min.js"></script>
-  <script src="feedback/js/feedback.js"></script>
-  <script src="feedback/js/jquery.arcticmodal.js"></script>
-  <script src="feedback/js/jquery.jgrowl.js"></script>
-  <script src="scripts/plugins/jquery.xfade-1.0.js"></script>
-  <script src="scripts/common.js"></script>
-  <link href="css/stl-final.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  
-  <script>
+<meta name="yandex-verification" content="ab603bc20afd81f8" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="cleartype" content="on">
+    <title>Официальное представительство PANDA в РФ</title>
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
+    <link rel="stylesheet" href="feedback/css/jquery.arcticmodal.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+    <script src="http://maps.google.com/maps/api/js?sensor=false&amp;libraries=geometry&amp;v=3.7"></script>
+    <script src="./js/maplace-0.1.3.min.js"></script>
+    <script src="feedback/js/feedback.js"></script>
+    <script src="feedback/js/jquery.arcticmodal.js"></script>
+    <script src="feedback/js/jquery.jgrowl.js"></script>
+    <script src="scripts/plugins/jquery.xfade-1.0.js"></script>
+    <script src="scripts/common.js"></script>
+    <link href="css/stl-final.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <script>
+
+
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
   ga('create', 'UA-94040518-1', 'auto');
   ga('send', 'pageview');
-  </script>
 
-  <!-- Facebook Pixel Code -->
-  <script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window,document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-   fbq('init', '332268013857589'); 
-  fbq('track', 'PageView');
-  </script>
-
-  <noscript>
-   <img height="1" width="1" src="https://www.facebook.com/tr?id=332268013857589&ev=PageView&noscript=1"/>
-  </noscript>
-  <!-- End Facebook Pixel Code -->
+</script>
+<!-- Facebook Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window,document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+ fbq('init', '332268013857589'); 
+fbq('track', 'PageView');
+</script>
+<noscript>
+ <img height="1" width="1" 
+src="https://www.facebook.com/tr?id=332268013857589&ev=PageView
+&noscript=1"/>
+</noscript>
+<!-- End Facebook Pixel Code -->
 </head>
 
 <body>
@@ -138,30 +143,26 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
-	
 
-	
-	
-	
-    <div class="banner">
-        <h1 class="col-lg-12">Официальный дилер Panda Robotics<br>на территории Российской Федерации</h1>
-        <div class="container">
-            <div class="row outfits hidden-xs">
-                <div class="col-lg-6 col-md-6 col-sm-6 outfits_left">
-                    <p>Умный и находчивый</p>
-                    <p>Не боится котов</p>
-                    <p>Мощный</p>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 outfits_right">
-                    <p>Стильный и модный</p>
-                    <p>Функциональный</p>
-                    <p>Надежный</p>
-                </div>
+<div class="banner">
+    <h1 class="col-lg-12">Официальное представительство Panda Robotics<br>на территории Российской Федерации</h1>
+    <div class="container">
+        <div class="row outfits hidden-xs">
+            <div class="col-lg-6 col-md-6 col-sm-6 outfits_left">
+                <p>Умный и находчивый</p>
+                <p>Не боится котов</p>
+                <p>Мощный</p>
             </div>
-           <a class="button button-new" href="#2017items">Посмотреть новинки 2017</a>
+            <div class="col-lg-6 col-md-6 col-sm-6 outfits_right">
+                <p>Стильный и модный</p>
+                <p>Функциональный</p>
+                <p>Надежный</p>
+            </div>
         </div>
+        <a class="button button-new" href="#2017items">Посмотреть новинки 2017</a>
     </div>
-    <div class="items container">
+</div>
+<div class="items container">
         <div class="row">
             <h2>Модельный ряд Panda</h2>
             <hr class="separator">
@@ -183,8 +184,8 @@
                     <li>Датчик заполнения пылесборника.</li>
                     <li>Влажная уборка: полотер.</li>
                     <li>Тип аккумулятора: Ni-Mh 2000 мАч.</li>
-		    <li>Навигация: алгоритмическая.</li>
-		    <li>Управление со смартфона: нет.</li>
+            <li>Навигация: алгоритмическая.</li>
+            <li>Управление со смартфона: нет.</li>
                 </ul>
                 <button class="button button-order" data-toggle="modal" data-target="#zakaz" data-product="Panda X600 Pet Series">Заказать за 15 990 ₽</button>
                 <a href="x600.html" class="detail">Узнать больше</a>
@@ -207,8 +208,8 @@
                     <li>Датчик заполнения пылесборника.</li>
                     <li>Влажная уборка: контейнер.</li>
                     <li>Тип аккумулятора: Ni-Mh 2000 мАч.</li>
-		    <li>Навигация: алгоритмическая.</li>
-		    <li>Управление со смартфона: нет.</li>
+            <li>Навигация: алгоритмическая.</li>
+            <li>Управление со смартфона: нет.</li>
 </ul>
                 <button class="button button-order" data-toggle="modal" data-target="#zakaz" data-product="Panda X900 Wet Clean">Заказать за 17 990 ₽</button>
                 <a href="x900.html" class="detail">Узнать больше</a>
@@ -231,8 +232,8 @@
                     <li>Датчик заполнения пылесборника.</li>
                     <li>Влажная уборка: контейнер.</li>
                     <li>Тип аккумулятора: Li-ion 2600 мАч.</li>
-		    <li>Навигация: <b>гироскоп.</b></li>
-		    <li>Управление со смартфона: <b>да.</b></li>                </ul>
+            <li>Навигация: <b>гироскоп.</b></li>
+            <li>Управление со смартфона: <b>да.</b></li>                </ul>
                 <button class="button button-order" data-toggle="modal" data-target="#zakaz" data-product="Panda X5S">Заказать за 29 990&nbsp;₽</button>
                 <a href="panda-x5s.html" class="detail">Узнать больше</a>
               </div>
@@ -542,84 +543,14 @@
         </div>
     </div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8997.272433399443!2d37.56514826864823!3d55.683457004805796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cbe51d6ca63%3A0xaf4f2bb80da5c2c6!2z0JrQtdC00YDQvtCy0LAg0YPQuy4sIDE1LCDQnNC-0YHQutCy0LAsIDExNzIxOA!5e0!3m2!1sru!2sru!4v1510335276614" width="100%" height="450" frameborder="0" style="border: 0" allowfullscreen></iframe>
-        <div class="modal fade" id="zvonok" tabindex="-1" role="dialog">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <a href="#" class="closed" data-dismiss="modal" aria-label="Close">
-                            <img src="./images/close.png">
-                        </a>
-                        <div class="title">Заказать звонок</div>
-                    </div>
-                    <div class="modal-body">
-                        <form action=" " name="form-1">
-                            <label>ВАШЕ ИМЯ</label>
-                            <input type="text" placeholder="" name="name">
-                            <label>ТЕЛЕФОН</label>
-                            <input type="text" placeholder="" name="tell">
-                            <a href="#" class="button-modal feedback" onclick="ga('send', 'event', 'звонок', 'заказать');">Перезвоните мне</a>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="modal fade" id="serial" tabindex="-1" role="dialog">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <a href="#" class="closed" data-dismiss="modal" aria-label="Close">
-                            <img src="./images/close.png">
-                        </a>
-                        <div class="title">Активация гарантии</div>
-                    </div>
-                    <div class="modal-body">
-                        <form action=" " name="form-2">
-                            <label>СЕРИЙНЫЙ НОМЕР</label>
-                            <input type="text" placeholder="" name="nomer">
-                            <label>ВАШЕ ИМЯ</label>
-                            <input type="text" placeholder="" name="name">
-                            <label>ТЕЛЕФОН</label>
-                            <input type="text" placeholder="" name="tell">
-                            <a href="#" class="button-modal feedback">Активировать</a>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="modal fade" id="zakaz" tabindex="-1" role="dialog">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <a href="#" class="closed" data-dismiss="modal" aria-label="Close">
-                            <img src="./images/close.png">
-                        </a>
-                        <div class="title">Оформить заявку</div>
-                    </div>
-                    <div class="modal-body">
-                        <form action=" " name="form-3">
-                            <label>ВАШЕ ИМЯ</label>
-                            <input type="text" placeholder="" name="name">
-                            <label>E-Mail</label>
-                            <input type="text" placeholder="" name="e-mail">
-                            <label>ТЕЛЕФОН</label>
-                            <input type="text" placeholder="" name="tell">
-                            <a href="#" class="button-modal feedback" onclick="ga('send', 'event', 'товар', 'заказ-2');">Заказать</a>
-                            <input type="hidden" name="product">
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
-    <!-- FOOTER -->
-    <footer>
+    
+<footer>
         <div class="container-fluid footer">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-3">
                         <div class="footer-item">
-                        	<h2>Поддержка:</h2>
+                            <h2>Поддержка:</h2>
                             <ul class="footer-list">
                                 <li class="footer-item"><a href="dino-sorry.html">Адреса сервисных центров в РФ</a></li>
                                 <li class="footer-item"><a href="dino-sorry.html">Рекомендации по уходу</a></li>
@@ -629,8 +560,8 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-3">
-                       	<div class="footer-item">
-                       		<h2>Режим работы:</h2>
+                        <div class="footer-item">
+                            <h2>Режим работы:</h2>
                             <ul class="footer-list">
                                 <li class="footer-item">Пн. - Пт. 09:00 - 22:00</li>
                                 <li class="footer-item">Сб. - Вс. 10:00 - 22:00</li>
@@ -644,12 +575,12 @@
                                 <li class="footer-item">8 (495) 989 24 07</li>
                                 <li class="footer-item">info@panda-robotics.ru</li>
                                 <li class="footer-item">Москва, ул. Кедрова, 15</li>
-                            </ul>	
+                            </ul>   
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-3">
                         <div class="footer-item">
-                        	<h2>Мы в социальных сетях:</h2>
+                            <h2>Мы в социальных сетях:</h2>
                             <ul class="social-links">
                                 <li>
               <a class="social-link vk" href="#">
@@ -679,7 +610,80 @@
             </div>
         </div>
     </footer>
-    <!-- FOOTER -->
+
+    <div id="line_10">
+        <div class="container">
+            <div id="line_11"></div>
+            <div class="modal fade" id="zvonok" tabindex="-1" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <a href="#" class="closed" data-dismiss="modal" aria-label="Close">
+                                <img src="./images/close.png">
+                            </a>
+                            <div class="title">Заказать звонок</div>
+                        </div>
+                        <div class="modal-body">
+                            <form action=" " name="form-1">
+                                <label>ВАШЕ ИМЯ</label>
+                                <input type="text" placeholder="" name="name">
+                                <label>ТЕЛЕФОН</label>
+                                <input type="text" placeholder="" name="tell">
+                                <a href="#" class="button-modal feedback" onclick="ga('send', 'event', 'звонок', 'заказать');">Перезвоните мне</a>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade" id="serial" tabindex="-1" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <a href="#" class="closed" data-dismiss="modal" aria-label="Close">
+                                <img src="./images/close.png">
+                            </a>
+                            <div class="title">Активация гарантии</div>
+                        </div>
+                        <div class="modal-body">
+                            <form action=" " name="form-2">
+                                <label>СЕРИЙНЫЙ НОМЕР</label>
+                                <input type="text" placeholder="" name="nomer">
+                                <label>ВАШЕ ИМЯ</label>
+                                <input type="text" placeholder="" name="name">
+                                <label>ТЕЛЕФОН</label>
+                                <input type="text" placeholder="" name="tell">
+                                <a href="#" class="button-modal feedback">Активировать</a>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade" id="zakaz" tabindex="-1" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <a href="#" class="closed" data-dismiss="modal" aria-label="Close">
+                                <img src="./images/close.png">
+                            </a>
+                            <div class="title">Оформить заявку</div>
+                        </div>
+                        <div class="modal-body">
+                            <form action=" " name="form-3">
+                                <label>ВАШЕ ИМЯ</label>
+                                <input type="text" placeholder="" name="name">
+                                <label>E-Mail</label>
+                                <input type="text" placeholder="" name="e-mail">
+                                <label>ТЕЛЕФОН</label>
+                                <input type="text" placeholder="" name="tell">
+                                <a href="#" class="button-modal feedback" onclick="ga('send', 'event', 'товар', 'заказ-2');">Заказать</a>
+                                <input type="hidden" name="product">
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 <!— BEGIN JIVOSITE CODE {literal} —> 
 <script type='text/javascript'> 
 (function(){ var widget_id = '8A1SZ8YaNw';var d=document;var w=window;function l(){ 
